Headers are freight sans pro

--- a/_variable.scss
+++ b/_variable.scss
@@ -9,3 +9,4 @@ $ffmetaserif-stack: "ff-meta-serif-web-pro",serif;
 $fftisaserif-stack: "ff-tisa-web-pro",serif;
 $serif-stac0: "georgia", "times new roman", serif;
 $lucidagrande-stack: "Lucida Grande", sans-serif;
+$freightsanspro-stack: "freight-sans-pro",sans-serif;
