--- a/tufte2.css
+++ b/tufte2.css
@@ -43,7 +43,7 @@ body {
 
 /* line 37, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article h1 {
-  font-family: "ff-tisa-web-pro", serif;
+  font-family: "freight-sans-pro", sans-serif;
   font-weight: 400;
   margin-top: 4.2rem;
   margin-bottom: 1rem;
@@ -52,7 +52,7 @@ article h1 {
 
 /* line 45, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article h2 {
-  font-family: "ff-tisa-web-pro", serif;
+  font-family: "freight-sans-pro", sans-serif;
   font-style: italic;
   font-weight: 400;
   margin-top: 2.1rem;
@@ -61,7 +61,7 @@ article h2 {
 
 /* line 53, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article h3 {
-  font-family: "ff-tisa-web-pro", serif;
+  font-family: "freight-sans-pro", sans-serif;
   font-style: italic;
   font-weight: 400;
   font-size: 1.7rem;
@@ -78,7 +78,12 @@ article hr {
   margin: 1em 0;
   padding: 0; }
 
-/* line 72, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 71, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+article h1, article h2, article h3, article h4 {
+  font-style: normal;
+  font-weight: bold; }
+
+/* line 77, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 p.subtitle {
   font-style: italic;
   margin-top: 1rem;
@@ -87,92 +92,92 @@ p.subtitle {
   display: block;
   line-height: 1; }
 
-/* line 81, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 86, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 .numeral {
   font-family: et-book-roman-old-style; }
 
-/* line 85, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 90, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 .danger {
   color: red; }
 
-/* line 89, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 94, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article {
   position: relative;
   padding: 5rem 0rem; }
 
-/* line 94, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 99, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article {
   /* Chapter Epigraphs */
   /* end chapter epigraphs styles */
   /* Links: replicate underline that clears descenders */ }
-  /* line 95, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 100, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article section {
     padding-top: 1rem;
     padding-bottom: 1rem; }
-  /* line 99, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 104, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p,
   article ol,
   article ul {
     font-size: 1.2rem; }
-  /* line 104, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 109, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p {
-    font-family: "ff-tisa-web-pro", serif !important;
+    font-family: "ff-meta-web-pro", sans-serif !important;
     font-weight: 400;
     line-height: 1.75;
     margin-top: 2.1rem;
     margin-bottom: 0;
     padding-right: 0;
     vertical-align: baseline; }
-  /* line 114, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 119, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p + p {
     margin-top: 0;
     text-indent: 2.1rem; }
-  /* line 119, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 124, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article br {
     line-height: 2.1rem; }
-  /* line 124, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 129, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph {
     margin: 5em 0; }
-  /* line 127, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 132, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote {
     margin-top: 2.1rem;
     margin-bottom: 2.1rem; }
-  /* line 131, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 136, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote,
   article div.epigraph > blockquote > p {
     font-style: italic; }
-  /* line 135, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 140, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote > footer {
     font-style: normal; }
-  /* line 138, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 143, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote > footer > cite {
     font-style: italic; }
-  /* line 142, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 147, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote {
     border-left: none;
     font-size: 1.4rem; }
-  /* line 146, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 151, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote p {
     width: 60%;
     margin-right: 40px; }
-  /* line 150, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 155, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote footer {
     margin-top: 2.1rem;
     width: 60% !important;
     font-size: 1.1rem !important;
     text-align: right !important;
-    font-family: "ff-tisa-web-pro", serif;
+    font-family: "ff-meta-web-pro", sans-serif;
     color: inherit; }
-  /* line 158, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 163, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article section > ol,
   article section > ul {
     width: 45%;
     -webkit-padding-start: 5%;
     -webkit-padding-end: 5%; }
-  /* line 164, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 169, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article li {
     padding: 0.5rem 0; }
-  /* line 167, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 172, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure {
     padding: 0;
     border: 0;
@@ -183,7 +188,7 @@ article {
     -webkit-margin-start: 0;
     -webkit-margin-end: 0;
     margin: 2.1rem 0 2.1rem 0; }
-  /* line 178, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 183, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figcaption {
     float: right;
     clear: right;
@@ -194,17 +199,17 @@ article {
     vertical-align: baseline;
     position: relative;
     max-width: 40%; }
-  /* line 190, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 195, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure.fullwidth {
     margin-top: 2.1rem; }
-  /* line 194, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 199, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure.fullwidth figcaption {
     margin-right: 24%; }
-  /* line 198, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 203, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link,
   article a:visited {
     color: inherit; }
-  /* line 202, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 207, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link {
     text-decoration: none;
     background: -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#333, #333);
@@ -216,17 +221,17 @@ article {
     background-position: 0% 93%, 100% 93%, 0% 93%; }
 
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
-  /* line 218, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 223, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   a:link {
     background-position-y: 87%, 87%, 87%; } }
 
-/* line 223, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 228, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article {
   /* Sidenotes, margin notes, figures, captions */ }
-  /* line 241, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 246, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article img {
     max-width: 100%; }
-  /* line 245, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 250, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote,
   article .marginnote {
     float: right;
@@ -239,69 +244,69 @@ article {
     line-height: 1.3;
     vertical-align: baseline;
     position: relative; }
-  /* line 259, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 264, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote-number {
     counter-increment: sidenote-counter; }
-  /* line 263, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 268, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote-number:after,
   article .sidenote:before {
     content: counter(sidenote-counter) " ";
     font-family: et-book-roman-old-style;
     position: relative;
     vertical-align: baseline; }
-  /* line 271, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 276, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote-number:after {
     content: counter(sidenote-counter);
     font-size: 1rem;
     top: -0.5rem;
     left: 0.1rem; }
-  /* line 278, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 283, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote:before {
     content: counter(sidenote-counter) " ";
     top: -0.5rem; }
-  /* line 283, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 288, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote .sidenote,
   article blockquote .marginnote {
     margin-right: -82%;
     min-width: 59%;
     text-align: left; }
-  /* line 290, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 295, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p,
   article footer,
   article table {
     width: 65%; }
-  /* line 296, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 301, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.fullwidth,
   article table.fullwidth {
     width: 100%; }
-  /* line 301, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 306, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.table-wrapper {
     overflow-x: auto;
     font-family: "Trebuchet MS", "Gill Sans", "Gill Sans MT", sans-serif; }
-  /* line 306, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 311, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sans {
     font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
     letter-spacing: .03em; }
-  /* line 311, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 316, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article code {
     font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
     font-size: 1.0rem;
     line-height: 1.42;
     color: rgba(0, 0, 0, 0.8);
     background-color: #EAEAE1 !important; }
-  /* line 324, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 329, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sans > code {
     font-size: 1.2rem; }
-  /* line 328, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 333, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article h1 > code,
   article h2 > code,
   article h3 > code {
     font-size: 0.80em; }
-  /* line 334, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 339, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .marginnote > code,
   article .sidenote > code {
     font-size: 1rem; }
-  /* line 339, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 344, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article pre.code {
     font-size: 0.9rem;
     width: 52.5%;
@@ -310,81 +315,81 @@ article {
     border: none !important;
     background-color: #EAEAE1 !important;
     overflow-x: auto; }
-  /* line 354, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 359, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article pre.code.fullwidth {
     width: 90%; }
-  /* line 358, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 363, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .fullwidth {
     max-width: 90%;
     clear: both; }
-  /* line 363, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 368, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article span.newthought {
     font-variant: small-caps;
     font-size: 1.2em; }
-  /* line 368, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 373, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article input.margin-toggle {
     display: none; }
-  /* line 372, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 377, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label.sidenote-number {
     display: inline; }
-  /* line 376, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 381, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label.margin-toggle:not(.sidenote-number) {
     display: none; }
 
 /* @group Desktop Only */
 @media only screen and (min-width: 1100px) and (max-width: 1441px) {
-  /* line 383, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 388, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   html {
     font-size: 15px; } }
 
 /* @group Tablets, Small Computers */
 @media only screen and (min-width: 0) and (max-width: 1099px) {
-  /* line 390, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 395, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   html {
     font-size: 13px; } }
 
 /* @group Mobile */
 @media only screen and (min-width: 0) and (max-width: 767px) {
-  /* line 397, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 402, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   html {
     font-size: 13px; }
-  /* line 404, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 409, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p {
     width: 100%; }
-  /* line 407, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 412, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p,
   article footer {
     width: 100%; }
-  /* line 411, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 416, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article pre.code {
     width: 97%; }
-  /* line 414, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 419, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article ul {
     width: 85%; }
-  /* line 417, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 422, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure {
     max-width: 90%; }
-  /* line 420, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 425, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figcaption,
   article figure.fullwidth figcaption {
     margin-right: 0%;
     max-width: none; }
-  /* line 425, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 430, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote {
     margin-left: 1.5em;
     margin-right: 0em; }
-  /* line 429, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 434, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote p,
   article blockquote footer {
     width: 100%; }
-  /* line 433, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 438, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label.margin-toggle:not(.sidenote-number) {
     display: inline; }
-  /* line 436, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 441, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote,
   article .marginnote {
     display: none; }
-  /* line 440, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 445, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .margin-toggle:checked + .sidenote,
   article .margin-toggle:checked + .marginnote {
     display: block;
@@ -395,14 +400,14 @@ article {
     margin: 1rem 2.5%;
     vertical-align: baseline;
     position: relative; }
-  /* line 451, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 456, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label {
     cursor: pointer; }
-  /* line 454, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 459, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.table-wrapper,
   article table {
     width: 85%; }
-  /* line 458, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 463, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article img {
     width: 100%; } }
 
