--- a/tufte2.scss
+++ b/tufte2.scss
@@ -1,7 +1,7 @@
 @import 'variable.scss';
 
-$selected-stack: $fftisaserif-stack;
-$header-stack: $selected-stack;
+$selected-stack: $font-stack;
+$header-stack: $freightsanspro-stack; // $lucidagrande-stack;// $selected-stack;
 $width: 60%;
 $sidenotemargin: -($width+10%);
 $black: rgba(0,0,0,.8);
@@ -66,7 +66,12 @@ article {
         border-top: 1px solid #ccc;
         margin: 1em 0;
         padding: 0;
-    }    
+    }
+    
+    h1, h2, h3, h4 {
+        font-style: normal;
+        font-weight: bold;
+    }
 }
 
 p.subtitle {
