Headers are freight sans pro

--- a/tufte2.scss
+++ b/tufte2.scss
@@ -1,6 +1,6 @@
 @import 'variable.scss';
 
-$selected-stack: $font-stack;
+$selected-stack: $fftisaserif-stack;
 $header-stack: $freightsanspro-stack; // $lucidagrande-stack;// $selected-stack;
 $width: 60%;
 $sidenotemargin: -($width+10%);
