--- a/work.css
+++ b/work.css
@@ -342,7 +342,7 @@ article {
     font-size: 1.2rem; }
   /* line 109, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p {
-    font-family: "ff-meta-web-pro", sans-serif !important;
+    font-family: "ff-tisa-web-pro", serif !important;
     font-weight: 400;
     line-height: 1.75;
     margin-top: 2.1rem;
@@ -387,7 +387,7 @@ article {
     width: 60% !important;
     font-size: 1.1rem !important;
     text-align: right !important;
-    font-family: "ff-meta-web-pro", sans-serif;
+    font-family: "ff-tisa-web-pro", serif;
     color: inherit; }
   /* line 163, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article section > ol,
