--- a/project_brief.scss
+++ b/project_brief.scss
@@ -35,23 +35,41 @@
     font-family: $font-stack;
 }
 
-.home-project-brief {
-    padding-right: 2rem;
-    background-color: white;
-//    opacity: 0.8;
-    height: 100%;
-}
+//.home-project-brief {
+//    padding-right: 2rem;
+//    background-color: white;
+//    height: 100%;
+//}
 
 .home-project-tags {
     text-transform: uppercase;
     font-family: $font-stack;
 }
 
-.project-banner-setting {
-    background-size: contain;
-    background-repeat: no-repeat;
-    position: relative;
-    margin-top: 2rem;
+//.home-project-left {
+//    padding-left: 0;
+//}
+//
+//.home-project-right {
+//    padding-right: 0;
+//}
+//
+//.project-banner-setting {
+//    background-size: contain;
+//    background-repeat: no-repeat;
+//    position: relative;
+//    margin-top: 2rem;
+//}
+
+.image-container {
+    width:100%;
+}
+
+.center-image {
+    float: right;
+    height: auto;
+    max-width: 100%;
+    margin: 0 0 0 auto;
 }
 
 .parallax {
@@ -59,14 +77,34 @@
     background-size: auto;
 }
 
-@media (max-height: 990px) {
-    .parallax {
-        height: 940px;
+@media only screen and (min-width: 767px) and (max-width: 1920px) {
+    .home-project-cover {
+        height:940px;
+        padding:0 5%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+        
+    .home-project-left {
+        padding-left: 0;
+        padding-right: 5rem;
+    }
+
+    .home-project-right {
+        padding-right: 0;
     }
 }
 
-@media (max-height: 768px) {
-    .parallax {
-    height: 768px - 50px;
+/* @group Mobile */
+@media only screen and (min-width: 0) and (max-width: 767px) {
+    .center-image {
+        float:none;
+        margin: auto;
+    }
+    
+    .home-project-cover {
+        padding-bottom: 3rem;
+        padding-top: 3rem;
     }
 }
