--- a/project_brief.css
+++ b/project_brief.css
@@ -67,6 +67,13 @@
   text-transform: uppercase;
   font-family: "ff-meta-web-pro", sans-serif; }
 
+/* line 57, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
+.project-banner-setting {
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: relative;
+  margin-top: 2rem; }
+
 /* line 64, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
 .image-container {
   width: 100%; }
