--- a/project_brief.scss
+++ b/project_brief.scss
@@ -54,12 +54,12 @@
 //    padding-right: 0;
 //}
 //
-//.project-banner-setting {
-//    background-size: contain;
-//    background-repeat: no-repeat;
-//    position: relative;
-//    margin-top: 2rem;
-//}
+.project-banner-setting {
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: relative;
+    margin-top: 2rem;
+}
 
 .image-container {
     width:100%;
