--- a/project_brief.scss
+++ b/project_brief.scss
@@ -31,6 +31,10 @@
     padding-bottom: 1rem;
 }
 
+.step {
+    font-family: $font-stack;
+}
+
 .home-project-blurb {
     font-family: $font-stack;
 }
