--- a/navbar.css
+++ b/navbar.css
@@ -65,7 +65,7 @@ body {
 
 /* line 40, /home/local/ANT/ajgopala/portfolio_new/navbar.scss */
 .navbar-default {
-  background-color: #FFFFFF !important;
+/*  background-color: #FFFFFF !important;*/
   -webkit-box-shadow: 0px 2px 6px 0px black;
   -moz-box-shadow: 0px 2px 6px 0px black;
   box-shadow: 0px 2px 6px 0px #d3d3d3;
