--- a/navbar.scss
+++ b/navbar.scss
@@ -38,7 +38,7 @@ body {
 }
 
 .navbar-default {
-    background-color: #FFFFFF !important;
+//    background-color:antiquewhite !important;
     -webkit-box-shadow: 0px 2px 6px 0px rgba(0,0,0,1);
     -moz-box-shadow: 0px 2px 6px 0px rgba(0,0,0,1);
     box-shadow: 0px 2px 6px 0px #000000;
