--- a/project_brief.scss
+++ b/project_brief.scss
@@ -29,6 +29,10 @@
 .home-project-subtitle {
     font-family: $font-stack;
     padding-bottom: 1rem;
+    letter-spacing:0.05em;
+    line-height: 1.5em;
+    font-weight: 500;
+    font-size: 2.3em;
 }
 
 .step {
