--- a/tufte2.scss
+++ b/tufte2.scss
@@ -5,11 +5,12 @@ $header-stack: $freightsanspro-stack; // $lucidagrande-stack;// $selected-stack;
 $width: 60%;
 $sidenotemargin: -($width+10%);
 $black: rgba(0,0,0,.8);
-$psize: 1.2rem;
-$ledding: 2.1rem;
+$psize: 1.06rem;
+$ledding: 1.86rem;
 $fontweight: 400;
-$beigebg:'no';
-$beigecolorbg: #EAEAE1 !important;
+$beigebg:'yes';
+$beigecolorbg: lighten(#EAEAE1,9%) !important;
+$column-gap: 3em;
 
 // 48.h1 33.h2 30.h3 27.subtitle 21.blockquote.p.newthought 16.5.footer 15.5.sidenote
 // 1.45 1.1 1.1 1.28 1.3 1
@@ -21,6 +22,67 @@ html {
     text-rendering: optimizeLegibility;
 }
 
+.fa-3 {
+    font-size: 2.5em;
+}
+
+.competitive-table td {
+    vertical-align: middle !important;
+}
+
+.competitive-table, .playtest-table, .heuristic-table, .design_improvements_table {
+
+        margin-top: $ledding;
+
+        th {
+            font-family: $freightsanspro-stack !important;
+        }
+
+        .fa-check {
+            color: forestgreen;
+        }
+
+        .fa-times {
+            color: firebrick;
+        }
+
+        .goal-col {
+            width: 60%;
+        }
+
+        .rest-col {
+            width: 20%;
+        }
+
+        dd {
+            width: 100%;
+        }
+}
+
+.playtest-symbol, .heuristic-symbol {
+    vertical-align: middle !important;
+}
+
+.videowrapper2 {
+    width: 65%;
+    margin-top: $ledding;
+}
+
+.videoWrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+
 body {
     color: $black;
     counter-reset: sidenote-counter;
@@ -31,6 +93,10 @@ body {
     @else {
         background-color: white;
     }
+}
+
+.nobottompadding {
+    padding-bottom: 0 !important;
 }
 
 article {
@@ -103,11 +169,15 @@ article {
     }
     p,
     ol,
-    ul {
+    ul, 
+    dd,
+    dt {
         font-size: $psize; // 18px
     }
-    p {
-        font-family: $selected-stack !important;
+    
+    p,
+    dd,
+    dt {
         font-weight: $fontweight;
         line-height: $ledding * 1.0 / $psize;
         margin-top: $ledding;
@@ -115,10 +185,26 @@ article {
         padding-right: 0;
         vertical-align: baseline;
     }
+    
+    p,dd {
+        font-family: $selected-stack !important;
+    }
+    
+    dt {
+        font-family: $freightsanspro-stack !important;
+    }
+        
+    dt {
+        font-weight: bold;
+    }
         
     p + p {
         margin-top: 0;
         text-indent: $ledding;
+    }
+    
+    .firstpara {
+        text-indent: inherit!important;
     }
     
     br {
@@ -168,6 +254,7 @@ article {
     }
     li {
         padding: 0.5rem 0;
+        font-family: $selected-stack;
     }
     figure {
         padding: 0;
@@ -294,8 +381,31 @@ article {
 
     p,
     footer,
-    table {
+    dd,
+    dt {
         width: 65%;
+    }
+    
+    table {
+        width: 65% !important;
+    }
+    
+    .twocolumnlist {
+        -webkit-column-count: 2;
+        -moz-column-count: 2;
+        -ms-column-count: 2;
+        -o-column-count: 2;
+        column-count: 2;
+        -webkit-column-gap: $column-gap;
+        -moz-column-gap: $column-gap;
+        -ms-column-gap: $column-gap;
+        -o-column-gap: $column-gap;
+        column-gap: $column-gap;
+    }
+    
+    .redline {
+        color:red;
+        background-color: yellow;
     }
 
     div.fullwidth,
